[gd_scene load_steps=10 format=3 uid="uid://bus8ewqfpgnka"]

[ext_resource type="Script" path="res://scenes/locations/bar/bar.gd" id="1_rt3ho"]
[ext_resource type="Texture2D" uid="uid://xvq5kxpfnrtt" path="res://dialogic/characters/barkeeper/onkel neutral.png" id="2_qojmi"]
[ext_resource type="Texture2D" uid="uid://cfypjal280bwa" path="res://assets/backgrounds/V2_bar_bg.png" id="2_t564t"]
[ext_resource type="Texture2D" uid="uid://880e403coglq" path="res://dialogic/characters/barkeeper/onkel.png" id="3_tlttg"]
[ext_resource type="Texture2D" uid="uid://lsamuy46cuth" path="res://assets/backgrounds/V1_bar_bg.png" id="4_0xvn1"]
[ext_resource type="Texture2D" uid="uid://dui7gmpxe0wch" path="res://dialogic/characters/barkeeper/onkel freundlich.png" id="4_tdl5t"]
[ext_resource type="PackedScene" uid="uid://es0kxxw0ecbx" path="res://scenes/gameplay/start_dialog_area.tscn" id="5_m2mqt"]
[ext_resource type="PackedScene" uid="uid://cu6xwlghypvjd" path="res://scenes/gameplay/go_overworld/go_overworld.tscn" id="7_cno7q"]
[ext_resource type="AudioStream" uid="uid://8vbidx44de8t" path="res://sound/background sound/location_3.ogg" id="7_intfm"]

[node name="bar" type="Node2D"]
script = ExtResource("1_rt3ho")
boris_normal = ExtResource("2_qojmi")
boris_angry = ExtResource("3_tlttg")
boris_friendly = ExtResource("4_tdl5t")

[node name="V2_Bar" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_t564t")

[node name="Onkel" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1148, 592)
scale = Vector2(0.508565, 0.508565)
texture = ExtResource("3_tlttg")

[node name="V1_Bar" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("4_0xvn1")

[node name="sorting_game_playable" parent="." instance=ExtResource("5_m2mqt")]
unique_name_in_owner = true
timeline_name = "l3_sorting_game"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="sorting_game_playable"]
polygon = PackedVector2Array(489, 93, 489, 212, 1482, 208, 1478, 95)

[node name="boris_talk" parent="." instance=ExtResource("5_m2mqt")]
unique_name_in_owner = true
timeline_name = "l3_scene4"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boris_talk"]
position = Vector2(24, 446)
polygon = PackedVector2Array(988, -146, 911, 292, 1306, 295, 1207, -149)

[node name="FadeIn" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="GoOverworld" parent="." instance=ExtResource("7_cno7q")]
unique_name_in_owner = true
position = Vector2(1750, 100)
enabled = false

[node name="bgm" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_intfm")
